--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "require": {
         "php": ">=5.3.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": ">=9.0"
+    },
     "autoload": {
         "psr-4": {
             "Psr\\Log\\": "Psr/Log/"
